Mudanças para português na área de login

--- a/startbootstrap/index.html
+++ b/startbootstrap/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>SB Admin 2 - Dashboard</title>
+    <title>Gerenciador</title>
 
     <!-- Custom fonts for this template-->
     <link
@@ -44,7 +44,7 @@
             <!-- Ícone personalizado -->
             <img
               class="sidebar-brand-icon rotate-n-15"
-              src="E:\startbootstrap\startbootstrap-sb-admin-2-gh-pages\img\logo.svg"
+              src="D:\Faculdade\Projeto PI- 4 Semestre\Projeto-PI---4-Semestre\startbootstrap\img\logo.svg"
               alt="Custom Icon"
               width="60"
               height="60"
@@ -52,8 +52,8 @@
             />
           </div>
           <div class="sidebar-brand-text mx-3">
-            <span style="position: relative; bottom: -5px">Admin</span>
-            <sup>2</sup>
+            <span style="position: relative; bottom: -5px">Nome Loja ?</span>
+            <sup></sup>
           </div>
         </a>
 
