--- a/startbootstrap/login.html
+++ b/startbootstrap/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Login</title>
+    <title>Login</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -54,7 +54,7 @@
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
                                                 <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">Lembrar-me</label>
+                                                <label class="custom-control-label" for="customCheck">Manter login</label>
                                             </div>
                                         </div>
                                         <a href="index.html" class="btn btn-primary btn-user btn-block">
@@ -73,7 +73,7 @@
                                         <a class="small" href="forgot-password.html">Esqueceu a senha?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="register.html">Criar uma conta!</a>
+                                        <a class="small" href="register.html">Criar uma conta</a>
                                     </div>
                                 </div>
                             </div>
