Icon na pagina de login - NÃO ESTA PRONTO

--- a/startbootstrap/login.html
+++ b/startbootstrap/login.html
@@ -35,7 +35,17 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                            <div class="col-lg-6 d-none d-lg-block bg-login-image">
+                                <!-- Ícone personalizado -->
+                                <img
+                                class="justify-content-center; card o-hidden border-1 shadow-lg my-5"
+                                src="D:\Faculdade\Projeto PI- 4 Semestre\Projeto-PI---4-Semestre\startbootstrap\img\logo.svg"
+                                alt="Custom Icon"
+                                width="400"
+                                height="400"
+                                style=""
+                                />
+                            </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
