--- a/startbootstrap/index.html
+++ b/startbootstrap/index.html
@@ -134,7 +134,7 @@
         <hr class="sidebar-divider" />
 
         <!-- Heading -->
-        <div class="sidebar-heading">Addons</div>
+        <div class="sidebar-heading">Complementos</div>
 
         <!-- Nav Item - Pages Collapse Menu -->
         <li class="nav-item">
@@ -147,7 +147,7 @@
             aria-controls="collapsePages"
           >
             <i class="fas fa-fw fa-folder"></i>
-            <span>Pages</span>
+            <span>Paginas</span>
           </a>
           <div
             id="collapsePages"
@@ -156,11 +156,11 @@
             data-parent="#accordionSidebar"
           >
             <div class="bg-white py-2 collapse-inner rounded">
-              <h6 class="collapse-header">Login Screens:</h6>
+              <h6 class="collapse-header">Tela de Login:</h6>
               <a class="collapse-item" href="login.html">Login</a>
-              <a class="collapse-item" href="register.html">Register</a>
+              <a class="collapse-item" href="register.html">Registar</a>
               <a class="collapse-item" href="forgot-password.html"
-                >Forgot Password</a
+                >Esqueceu a senha ?</a
               >
               <div class="collapse-divider"></div>
               <h6 class="collapse-header">Other Pages:</h6>
@@ -186,7 +186,7 @@
         <li class="nav-item">
           <a class="nav-link" href="tables.html">
             <i class="fas fa-fw fa-table"></i>
-            <span>Tables</span></a
+            <span>Tabelas</span></a
           >
         </li>
 
@@ -199,20 +199,17 @@
         </div>
 
         <!-- Sidebar Message -->
-        <div class="sidebar-card d-none d-lg-flex">
+        <div class="">
           <img
-            class="sidebar-card-illustration mb-2"
-            src="img/undraw_rocket.svg"
-            alt="..."
+            class=""
+            alt=""
           />
           <p class="text-center mb-2">
-            <strong>SB Admin Pro</strong> is packed with premium features,
-            Gerenciar Produto, and more!
+            <strong></strong> 
           </p>
           <a
-            class="btn btn-success btn-sm"
-            href="https://startbootstrap.com/theme/sb-admin-pro"
-            >Upgrade to Pro!</a
+            class=""
+            href=""
           >
         </div>
       </ul>
@@ -472,7 +469,7 @@
                   aria-expanded="false"
                 >
                   <span class="mr-2 d-none d-lg-inline text-gray-600 small"
-                    >Douglas McGee</span
+                    >Nome de Usuário</span
                   >
                   <img
                     class="img-profile rounded-circle"
@@ -486,11 +483,11 @@
                 >
                   <a class="dropdown-item" href="#">
                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Profile
+                    Perfil
                   </a>
                   <a class="dropdown-item" href="#">
                     <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Settings
+                    Configurações
                   </a>
                   <a class="dropdown-item" href="#">
                     <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
